--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,37 @@
     border: 1px solid white;
 }
 
-html {
+body {
     background-color: darkgray;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.rightPane {
+    display: flex;
+    flex-direction: column;
+    
+    
+    
+}
+
+.right1 {
+    height: 33%;
+    background-color: beige;
+}
+
+.right2 {
+    height: 34%;
+    background-color: azure;
+}
+
+.right3 {
+    height: 33%;
+    background-color: beige;
+}
+
+.img {
+    flex: 0 1 02%;
+}
