--- a/styles.css
+++ b/styles.css
@@ -38,9 +38,41 @@ body {
 }
 
 /* Max-width needed else the image stubbornly forces its own width */
-img {
-    max-width: 40vw;
+/* img {
+    filter: sepia(0.3) blur(2px);
+    
     height: 100%;
     object-fit: cover;
-    flex: 1 1 40%;
+    flex: 1 1 35%;
+    max-width: 35vw;
+} */
+
+
+.hero {
+  background-image: url("heroCastle.png");
+  
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  flex: 1 1 35%;
+  max-width: 35vw;
+}
+
+.placard {
+    
+    position: absolute;
+    top: 30vh;
+    width: 35vw;
+    background-color: rgba(0,0,0,0.5);
+    color: white;
+    font-weight: 600;
+    font-size: 5rem;
+    text-align: center;
+    letter-spacing: 0.2rem;
+}
+
+.logo {
+    
+    width: 25%;
 }
