--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,12 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-size: 62.5%; /* 1 rem = 10 px here, usually 1 rem = 16px */
     border: 1px solid white;
+}
+
+html {
+    font-size: 62.5%; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -11,7 +15,7 @@ body {
     display: flex;
     height: 100vh;
     width: 100vw;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.6rem; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
 }
 
 .rightPane {
@@ -32,6 +36,7 @@ body {
 
 .right2 {
     background-color: rgb(103, 141, 32);
+    
 }
 
 .right3 {
@@ -60,9 +65,9 @@ body {
   max-width: 35vw;
 }
 
-.hero:before {
+/* .hero:before {
     backdrop-filter: blur(500px);
-}
+} */
 
 .placard {
     display: flex;
