--- a/styles.css
+++ b/styles.css
@@ -39,24 +39,43 @@ body {
     
 }
 
+/* Form and Fieldset Flexbox layouts here */
+/* -------------------------------------- */
+form {
+    display: flex;
+    flex-flow: column nowrap;
+    margin-right: 40%;
+    gap: 4rem;
+    position: relative;
+    left: 5%;
+    top: 5%;
+}
+
+form h2 {
+    width: fit-content;
+}
+
+fieldset {
+    display: flex;
+    flex-flow: row wrap; /*I don't mind if this wraps, to one column?*/
+    justify-content: space-between;    
+}
+
+.inputGroup {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+/* -------------------------------------- */
+/* Form and Fieldset Flexbox layouts here */
+
 .right3 {
     background-color: beige;
 }
 
 /* Max-width needed else the image stubbornly forces its own width */
-/* img {
-    filter: sepia(0.3) blur(2px);
-    
-    height: 100%;
-    object-fit: cover;
-    flex: 1 1 35%;
-    max-width: 35vw;
-} */
-
-
 .hero {
-  background-image: url("heroCastle.png");
-  
+  background-image: url("heroCastle.png");  
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
