--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ html {
 body {
     background-color: darkgray;
     display: flex;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     font-size: 1.6rem; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
 }
 
@@ -22,21 +22,23 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1 1 60%;
-        
+   
 }
 
 /* The 'basis' of 0 here (on all items) makes them take all available space */
-.right1, .right2, .right3 {
-    flex: 1 1 0;
-}
-
 .right1 {
-    background-color: beige;  
+    background-color: beige;
+    flex: 1 1 0;
 }
 
 .right2 {
     background-color: rgb(103, 141, 32);
-    
+    flex: 1 1 0;
+}
+
+.right3 {
+    background-color: beige;
+    flex: 1 1 0;
 }
 
 /* Form and Fieldset Flexbox layouts here */
@@ -69,24 +71,16 @@ fieldset {
 /* -------------------------------------- */
 /* Form and Fieldset Flexbox layouts here */
 
-.right3 {
-    background-color: beige;
-}
-
 /* Max-width needed else the image stubbornly forces its own width */
 .hero {
   background-image: url("heroCastle.png");  
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100%;
+  min-height: 100vh;
   flex: 1 1 35%;
   max-width: 35vw;
 }
-
-/* .hero:before {
-    backdrop-filter: blur(500px);
-} */
 
 .placard {
     display: flex;
