--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,13 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    border: 1px solid white;
+    /* border: 1px solid white; */
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    font-weight: bold;
 }
 
 html {
@@ -15,7 +21,7 @@ body {
     display: flex;
     min-height: 100vh;
     min-width: 100vw;
-    font-size: 1.6rem; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
+    font-size: 1.8rem; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
 }
 
 .rightPane {
@@ -26,41 +32,45 @@ body {
 }
 
 /* The 'basis' of 0 here (on all items) makes them take all available space */
-.right1 {
-    
-    background: linear-gradient(45deg, rgba(247, 235, 230) 0%, rgba(164, 126, 107) 100%);
+.right1 {    
+    background: linear-gradient(90deg, #bdc3c7 50%, #2c3e50 100%);
     flex: 1 1 0;
     justify-self: flex-start;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
+    font-size: clamp(1.2rem, 1.2vw, 2rem);
     padding-left: 5%;
-    padding-bottom: 5%;
+    
 }
 
 .right1 h2 {
-    width: 70%;
+    width: 80%;
 }
 
 .right3 {
-    background: linear-gradient(135deg, rgb(247, 235, 230) 0%, rgb(164, 126, 107) 100%);
+    background: linear-gradient(90deg, #bdc3c7 50%, #2c3e50 100%);
     flex: 1 1 0;
     justify-self: flex-end;
-    
+    display: flex;
+    align-items: flex-start;
 }
 
 .right3Content {
     width: 60%;
-    position: relative;
-    left: 5%;
-    top: 5%;
-    font-size: 2rem;
+    
+    padding-left: 5%;
+    padding-top: 5%;
+    font-size: clamp(2rem, 2.6vw, 2.8rem);
 
 }
 
 .right2 {
-    background-color: rgb(103, 141, 32);
+    background-color: #2c3e50;
     min-height: 40%;
+    color: white;
+    box-shadow: 0px 10px 50px #2c3e50, 0px -10px 50px #2c3e50;
+    z-index: 2;
     /* flex: 1 1 0;
     display: flex;
     justify-self: stretch;
@@ -113,23 +123,24 @@ fieldset {
   min-height: 100vh;
   flex: 1 1 35%;
   max-width: 35vw;
+  z-index: 3;
 }
 
 .placard {
     display: flex;
     place-content: center;
-    padding: 2rem;
+    padding: 0.8rem;
     position: relative;
-    top: 33%;
+    top: 19%;
     width: 35vw;
     background-color: rgba(0,0,0,0.6);
     color: white;
     font-family: Tillana;
     font-weight: 600;
-    font-size: 4vw;    
-    padding: 0.5rem;
+    font-size: clamp(4vw, 4vw, 2.8rem);    
     text-align: center;
     letter-spacing: 0.1rem;
+    flex-wrap: wrap;
     
 }
 
@@ -138,5 +149,5 @@ fieldset {
 }
 
 .logo {    
-    width: 4.5vw;
+    width: clamp(10%,20%,30%);
 }
