--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ a {
 html {
     font-size: 62.5%; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1.4;
 }
 
 body {
@@ -104,12 +105,28 @@ fieldset {
     flex-flow: row wrap; /*I don't mind if this wraps, to one column?*/
     justify-content: space-between;
     gap: 4rem;
+    /* border: none; */
 }
 
 .inputGroup {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin: 5px;
+    width: 30%;
+}
+
+input[type=text], input[type=email], input[type=tel], input[type=password] {
+    padding: 0.5rem;
+    background-image: linear-gradient(90deg, white 60%, #2c3e50 100%);
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    transition: background-image 1s;
+}
+
+input[type=text]:focus, input[type=email]:focus, input[type=tel]:focus, input[type=password]:focus {
+    background-image: white;
 }
 /* -------------------------------------- */
 /* Form and Fieldset Flexbox layouts here */
