slight width adjust

--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,9 @@ fieldset {
     display: flex;
     flex-flow: row wrap; /*I don't mind if this wraps, to one column?*/
     justify-content: space-between;
-    gap: 2rem;
-    width: 80%;
-    /* border: none; */
+    gap: 2rem;    
+    min-width: fit-content;
+    border: none;
 }
 
 .inputGroup {
@@ -127,7 +127,7 @@ input[type=text], input[type=email], input[type=tel], input[type=password] {
     border: none;
     border-radius: 5px;
     outline: none;    
-    
+    min-width: 12rem;
     transition: background-color 0.5s;
     caret-color: black;
     box-shadow:2px 2px 4px 1px #00000042;
