add image credit and final adjustments

--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ html {
 body {
     background-color: darkgray;
     display: flex;
-    min-height: 100vh;
-    min-width: 100vw;
+    min-height: 99vh;
+    min-width: 99vw;
     font-size: 1.8rem; /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
 }
 
@@ -186,6 +186,15 @@ button:active {
   flex: 1 1 35%;
   max-width: 35vw;
   z-index: 3;
+  position:relative;
+}
+
+.credit {
+    color: white;
+    position: absolute;
+    display: inline;
+    bottom: 2%;
+    left: 2%;
 }
 
 .placard {
